k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-prod
  labels:
    name: devops-prod
    env: production
    managed-by: terraform
