k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
  namespace: devops-prod
  labels:
    app: devops-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port:   "8000"
spec:
  type: NodePort
  selector:
    app: devops-app
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30080
      protocol: TCP
