k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-app-ingress
  namespace: devops-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:      /
    nginx.ingress.kubernetes.io/proxy-body-size:     "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout:  "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout:  "60"
    nginx.ingress.kubernetes.io/ssl-redirect:        "false"
    nginx.ingress.kubernetes.io/rate-limit:          "100"
spec:
  ingressClassName: nginx
  rules:
    - host: devops-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-app-service
                port:
                  number: 8000
